# mini-agent

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: simple.rs
src/: lib.rs
src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
tests/: tests.rs
