[package]
name = "mini-agent"
version = "0.1.0"
edition = "2021"
description = "A tiny, educational AI agent core for Rust"
license = "MIT OR Apache-2.0"
# repository = "https://github.com/yourusername/mini-agent"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"