[package]
name = "mini-agent"
version = "0.2.0"
edition = "2021"
description = "A minimal, extensible AI agent framework in Rust with multi-provider support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RajMandaliya/mini-agent"

[lib]
name = "mini_agent"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"